--- a/staticfiles/css/view.css
+++ b/staticfiles/css/view.css
@@ -10,7 +10,10 @@
     display: inline-block;
     flex: initial;
 }
-
+#action-container>.sc-title{
+    width: inherit!important;
+    white-space: normal;
+}
 /* arrangement elements */
 
 .floater {
